--- a/front-end/src/app/event/new-event/forms/organize-trip-form/organize-trip-form.component.html
+++ b/front-end/src/app/event/new-event/forms/organize-trip-form/organize-trip-form.component.html
@@ -15,20 +15,20 @@
         <!--Prefer Locations-->
         <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="30px">
           <mat-label ngModel i18n>Prefer Locations:</mat-label>
-          <mat-checkbox value="Nature" i18n>Nature</mat-checkbox>
-          <mat-checkbox value="Modern City" i18n>Modern City</mat-checkbox>
-          <mat-checkbox value="Old City's" i18n>Old City's</mat-checkbox>
-          <mat-checkbox value="Museums" i18n>Museums</mat-checkbox>
-          <mat-checkbox value="Involve water trips" i18n>Involve water trips</mat-checkbox>
+          <mat-checkbox value="Nature" i18n name="Nature" ngModel>Nature</mat-checkbox>
+          <mat-checkbox value="Modern City" name="Modern City" ngModel i18n>Modern City</mat-checkbox>
+          <mat-checkbox value="Old City's"  name="Old City's" ngModel i18n>Old City's</mat-checkbox>
+          <mat-checkbox value="Museums" name="Museums" ngModel i18n>Museums</mat-checkbox>
+          <mat-checkbox value="Involve water trips" name="Involve water trips" ngModel i18n>Involve water trips</mat-checkbox>
         </div>
   </div>
   
   
   <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="20px">
   
-      <mat-form-field fxFlex="20" ngModel i18n-placeholder required>
+      <mat-form-field fxFlex="20" i18n-placeholder required>
           <mat-label i18n>Preferred Area</mat-label >
-              <mat-select required>
+              <mat-select name="Preferred Area " ngModel required>
                   <mat-option value="Center Area" i18n>Center Area</mat-option>
                   <mat-option value="South Area" i18n>South Area</mat-option>
                   <mat-option value="North Area" i18n>North Area</mat-option>
