--- a/front-end/src/app/event/new-event/forms/picnic-form/picnic-form.component.html
+++ b/front-end/src/app/event/new-event/forms/picnic-form/picnic-form.component.html
@@ -4,7 +4,7 @@
 
     <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="20px">
         <mat-form-field fxFlex="45">
-            <input matInput placeholder="How much money you willing to invest" name="money" ngModel i18n-placeholder required type="number">
+            <input matInput placeholder="How much money you willing to invest" name="money" ngModel i18n-placeholder required type="number" min="0">
         </mat-form-field>
     </div>
   
@@ -65,9 +65,9 @@
         <mat-form-field fxFlex="20" i18n-placeholder required>
             <mat-label i18n>Food</mat-label >
                 <mat-select name="Food" ngModel required>
-                    <mat-option value="Center Area" i18n>Center Area</mat-option>
-                    <mat-option value="South Area" i18n>South Area</mat-option>
-                    <mat-option value="North Area" i18n>North Area</mat-option>
+                    <mat-option value="All Meat" i18n>All Meat</mat-option>
+                    <mat-option value="Meat and Vegetarian Mix" i18n>Meat and Vegetarian Mix</mat-option>
+                    <mat-option value="Only Vegetarian" i18n>Only Vegetarian</mat-option>
             </mat-select>
           </mat-form-field>
     </div>
@@ -77,9 +77,9 @@
         <mat-form-field fxFlex="20" i18n-placeholder required>
             <mat-label i18n>Snacks</mat-label >
                 <mat-select name="Snacks" ngModel required>
-                    <mat-option value="Center Area" i18n>Center Area</mat-option>
-                    <mat-option value="South Area" i18n>South Area</mat-option>
-                    <mat-option value="North Area" i18n>North Area</mat-option>
+                    <mat-option value="Sweet" i18n>Sweeta</mat-option>
+                    <mat-option value="Sour" i18n>Sour</mat-option>
+                    <mat-option value="Sweet and Sour mix " i18n>Sweet and Sour mix</mat-option>
             </mat-select>
           </mat-form-field>
     </div>
@@ -88,18 +88,29 @@
         <mat-form-field fxFlex="20" i18n-placeholder required>
             <mat-label i18n>Dessert</mat-label >
                 <mat-select name="Dessert" ngModel required>
-                    <mat-option value="Center Area" i18n>Center Area</mat-option>
-                    <mat-option value="South Area" i18n>South Area</mat-option>
-                    <mat-option value="North Area" i18n>North Area</mat-option>
+                    <mat-option value="Cake" i18n>Cake</mat-option>
+                    <mat-option value="Muffin" i18n>Muffin</mat-option>
+                    <mat-option value="Cheeses" i18n>Cheeses</mat-option>
             </mat-select>
           </mat-form-field>
     </div>
-        <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="20px">
-            <mat-form-field fxFlex="45">
-                <input matInput placeholder="Free Text" name="free-text" ngModel i18n-placeholder >
-            </mat-form-field>
-        </div>
-      
+    <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="20px">
+  
+        <mat-form-field fxFlex="20" i18n-placeholder required>
+            <mat-label i18n>Kosher</mat-label >
+                <mat-select name="Kosher " ngModel required>
+                    <mat-option value="Yes" i18n>Yes</mat-option>
+                    <mat-option value="No" i18n>No</mat-option>
+            </mat-select>
+          </mat-form-field>
+    </div>
 
-   
-  </div>
+
+
+    <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="20px">
+        <mat-form-field fxFlex="45">
+            <input matInput placeholder="Free Text" name="free-text" ngModel i18n-placeholder >
+        </mat-form-field>
+    </div>
+
+</div>
