--- a/front-end/src/app/event/new-event/forms/birthday-form/birthday-form.component.html
+++ b/front-end/src/app/event/new-event/forms/birthday-form/birthday-form.component.html
@@ -4,7 +4,7 @@
 
   <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="20px">
       <mat-form-field fxFlex="45">
-          <input matInput placeholder="How much money you willing to invest" name="money" ngModel i18n-placeholder required>
+          <input matInput placeholder="How much money you willing to invest" name="money" ngModel i18n-placeholder type="number" min="0" required>
       </mat-form-field>
   </div>
 
@@ -47,13 +47,13 @@
 </div>
 
 <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="20px">
-
+  
   <mat-form-field fxFlex="20" i18n-placeholder required>
       <mat-label i18n>Food</mat-label >
           <mat-select name="Food" ngModel required>
-              <mat-option value="Center Area" i18n>Center Area</mat-option>
-              <mat-option value="South Area" i18n>South Area</mat-option>
-              <mat-option value="North Area" i18n>North Area</mat-option>
+              <mat-option value="All Meat" i18n>All Meat</mat-option>
+              <mat-option value="Meat and Vegetarian Mix" i18n>Meat and Vegetarian Mix</mat-option>
+              <mat-option value="Only Vegetarian" i18n>Only Vegetarian</mat-option>
       </mat-select>
     </mat-form-field>
 </div>
@@ -63,20 +63,44 @@
   <mat-form-field fxFlex="20" i18n-placeholder required>
       <mat-label i18n>Snacks</mat-label >
           <mat-select name="Snacks" ngModel required>
-              <mat-option value="Center Area" i18n>Center Area</mat-option>
-              <mat-option value="South Area" i18n>South Area</mat-option>
-              <mat-option value="North Area" i18n>North Area</mat-option>
+              <mat-option value="Sweet" i18n>Sweet</mat-option>
+              <mat-option value="Sour" i18n>Sour</mat-option>
+              <mat-option value="Sweet and Sour mix " i18n>Sweet and Sour mix</mat-option>
       </mat-select>
     </mat-form-field>
 </div>
+
+<div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="20px">
+
+  <mat-form-field fxFlex="20" i18n-placeholder required>
+      <mat-label i18n>Birth-Day Cake</mat-label >
+          <mat-select name="Birth-Day Cake" ngModel required>
+              <mat-option value="Chocolate Cake" i18n>Chocolate Cake</mat-option>
+              <mat-option value="Cheese Cake" i18n>Cheese Cake</mat-option>
+              <mat-option value="Fruit Cake" i18n>Fruit Cake</mat-option>
+              <mat-option value="Don't know what cake" i18n>Don't know what cake</mat-option>
+      </mat-select>
+    </mat-form-field>
+</div>
+
 <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="20px">
 
   <mat-form-field fxFlex="20" i18n-placeholder required>
       <mat-label i18n>Dessert</mat-label >
           <mat-select name="Dessert" ngModel required>
-              <mat-option value="Center Area" i18n>Center Area</mat-option>
-              <mat-option value="South Area" i18n>South Area</mat-option>
-              <mat-option value="North Area" i18n>North Area</mat-option>
+              <mat-option value="Cake" i18n>Cake</mat-option>
+              <mat-option value="Muffin" i18n>Muffin</mat-option>
+              <mat-option value="Cheeses" i18n>Cheeses</mat-option>
+      </mat-select>
+    </mat-form-field>
+</div>
+<div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="20px">
+  
+  <mat-form-field fxFlex="20" i18n-placeholder required>
+      <mat-label i18n>Kosher</mat-label >
+          <mat-select name="Kosher " ngModel required>
+              <mat-option value="Yes" i18n>Yes</mat-option>
+              <mat-option value="No" i18n>No</mat-option>
       </mat-select>
     </mat-form-field>
 </div>
