--- a/front-end/src/app/event/new-event/forms/organize-trip-form/organize-trip-form.component.html
+++ b/front-end/src/app/event/new-event/forms/organize-trip-form/organize-trip-form.component.html
@@ -4,7 +4,7 @@
 
     <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="20px">
         <mat-form-field fxFlex="45">
-            <input matInput placeholder="How much money you willing to invest" name="money" ngModel i18n-placeholder required type="number">
+            <input matInput placeholder="How much money you willing to invest" name="money" ngModel i18n-placeholder required type="number" min="0">
         </mat-form-field>
     </div>
   
