--- a/front-end/src/app/event/new-event/forms/simple-form/simple-form.component.html
+++ b/front-end/src/app/event/new-event/forms/simple-form/simple-form.component.html
@@ -32,7 +32,7 @@
             <ng-template matStepLabel>Done</ng-template>
             <p>Thanks for using the survey!</p>
             <div>
-              <button mat-raised-button type="button" (click)="onClick(form)" color="primary">Submit Data</button>
+              <button mat-raised-button type="button" color="primary">Submit Data</button>
             </div>
           </mat-step>
         </mat-horizontal-stepper>
