fixed event forms- picnic+birthday

--- a/front-end/src/app/event/new-event/forms/picnic-form/picnic-form.component.html
+++ b/front-end/src/app/event/new-event/forms/picnic-form/picnic-form.component.html
@@ -1,6 +1,6 @@
 
 
-<div ngModelGroup="{{modelGroupName}}">
+<div ngModelGroup="picnic">
 
     <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="20px">
         <mat-form-field fxFlex="45">
@@ -10,7 +10,7 @@
   
 </div>
   
-  <div ngModelGroup="{{modelGroupName}}">
+  <div ngModelGroup="picnic">
   
         <!--Prefer Locations-->
         <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="30px">
@@ -36,7 +36,7 @@
         </mat-form-field>
   </div>
   
-  <div ngModelGroup="{{modelGroupName}}">
+  <div ngModelGroup="picnic">
   
     <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="20px">
   
