fixed connection form mail

--- a/front-end/src/app/event/new-event/form-modal/form-modal.component.html
+++ b/front-end/src/app/event/new-event/form-modal/form-modal.component.html
@@ -20,13 +20,13 @@
             <option value="basic-option">
               <label>Basic Form</label>
             </option>
-            <option value="birth-day-option">
+            <option value="birthday-form">
               <label>Birth-Day Form</label>
             </option>
-            <option value="organize-option">
+            <option value="organize-form">
               <label>Organize Trip Form</label>
             </option>
-            <option value="picnic-option">
+            <option value="picnic-form">
               <label>Picnic Form</label>
             </option>
           </select>
