--- a/front-end/src/app/event/new-event/form-modal/form-modal.component.html
+++ b/front-end/src/app/event/new-event/form-modal/form-modal.component.html
@@ -34,7 +34,7 @@
       </section>
   
       <footer class="modal-card-foot">
-        <button class="button is-success" (click)="selectedItem()">Show Form</button>
+        <button class="button is-success" (click)="selectedItem()">Select Form</button>
         <button class="button" (click)="cancel()">Cancel</button>
       </footer>
     </div>
