--- a/front-end/src/app/event/new-event/forms/end-point-forms/organize-complete-form/organize-complete-form.component.html
+++ b/front-end/src/app/event/new-event/forms/end-point-forms/organize-complete-form/organize-complete-form.component.html
@@ -2,7 +2,7 @@
 <mat-card class="organize-card">
     <mat-card-header>
       <mat-card-title>Event Questionnaire</mat-card-title>
-      <mat-card-subtitle>This is a sample questionnaire for Health Evaluation</mat-card-subtitle>
+      <mat-card-subtitle>This is a form for your next event - please fill it up!</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
       <form (ngSubmit)="onSubmit(f)" #f="ngForm" novalidate>
