--- a/front-end/src/app/event/new-event/forms/end-point-forms/birthday-complete-form/birthday-complete-form.component.html
+++ b/front-end/src/app/event/new-event/forms/end-point-forms/birthday-complete-form/birthday-complete-form.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
 <mat-card class="picnic-card">
     <mat-card-header>
-      <mat-card-title>Event Questionnaire</mat-card-title>
-      <mat-card-subtitle>This is a sample questionnaire for Health Evaluation</mat-card-subtitle>
+      <mat-card-title>Event Questionnaire for </mat-card-title>
+      <mat-card-subtitle>This is a form for your next event - please fill it up!</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
       <form (ngSubmit)="onSubmit(f)" #f="ngForm" novalidate>
